syntax = "proto3";

package main;

option go_package = "./pb";

service Airdog {
    rpc UpdateLeaderboard(UpdateLeaderboardReq) returns (UpdateLeaderboardResp);
}

message Entry {
    uint64 steam_id   = 1;
    int32  steam_rank = 2;
    int32  time_ms    = 3;
}

message UpdateLeaderboardReq {
             int32   leaderboard_id = 1;
             string  level_id       = 2;
    repeated Entry   entries        = 3;
}

message UpdateLeaderboardResp {}
